@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-23T16:12:07Z",
+  "timestamp" : "2023-10-24T00:42:19Z",
   "count_outdated" : 1835,
   "uniques_outdated" : 626,
-  "count" : 1858,
-  "uniques" : 638,
+  "count" : 1859,
+  "uniques" : 639,
   "views" : [
     {
       "timestamp": "2023-10-10T00:00:00Z",
@@ -70,6 +70,15 @@
     },
     {
       "timestamp": "2023-10-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
