@@ -1,6 +1,6 @@
 {
-  "count": 23,
-  "uniques": 12,
+  "count": 24,
+  "uniques": 13,
   "views": [
     {
       "timestamp": "2023-10-10T00:00:00Z",
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2023-10-22T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-10-23T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
